--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,9 +7,9 @@ spring:
   
   # PostgreSQL R2DBC 설정 (나중에 DB 연결할 때 사용)
   r2dbc:
-    url: r2dbc:postgresql://localhost:5432/accountbook
-    username: postgres
-    password: password
+    url: r2dbc:postgresql://34.19.118.233:5432/account_book
+    username: kwjy
+    password: kwjy
   
   # WebFlux 설정
   webflux:
